--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
     "http-server": "^0.12.3",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "web-vitals": "^3.1.1"
   }
 }
