--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
   ],
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
+    "dayjs": "^1.11.7",
     "http-server": "^0.12.3",
-    "moment": "^2.29.1",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "webpack-bundle-analyzer": "^4.7.0"
   }
 }
