--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dayjs": "^1.11.7",
     "http-server": "^0.12.3",
     "web-vitals": "^3.1.1",
-    "webpack-bundle-analyzer": "^4.7.0"
+    "webpack-bundle-analyzer": "^4.7.0",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
